[package]
name = "algo-prompt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18.0"
qrcode = "0.12.0"
algonaut = { git = "https://github.com/manuelmauro/algonaut", branch = "main" }
wasm-logger = "0.2"
log = "0.4"
